--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta charset="utf-8">
-<title>盲僧-主页</title>
+<title>DEMO盲僧-主页</title>
 <link rel="stylesheet" href="css/reset.css" />
 <link rel="stylesheet" href="css/index.css" />
 </head>
