--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 </header>
 <article id="index">
 	<h1>盲僧-李青</h1>
-    <p>盲僧,别名瞎子,李青,盲僧。盲僧作为常驻的神级打野，打野效率和gank能力都非常优秀，可以说是打野英雄中的代表人物。你可以查看<a href="jiqiao.html">使用他的小技巧</a>，或者<a href="jineng.html">熟悉他的技能</a>。英雄本身在前期也很强势，唯一缺点就是后期较为乏力。查看<a href="paihang.html">打野排行榜</a>，有任何疑问请<a href="lianxi.html">联系作者</a>。</p>
+    <p>盲僧:别名瞎子,李青,盲僧。盲僧作为常驻的神级打野，打野效率和gank能力都非常优秀，可以说是打野英雄中的代表人物。你可以查看<a href="jiqiao.html">使用他的小技巧</a>，或者<a href="jineng.html">熟悉他的技能</a>。英雄本身在前期也很强势，唯一缺点就是后期较为乏力。查看<a href="paihang.html">打野排行榜</a>，有任何疑问请<a href="lianxi.html">联系作者</a>。</p>
 </article>
 </body>
 <script src="js/index.js"></script>
